images updated in index.html

--- a/index.html
+++ b/index.html
@@ -453,20 +453,20 @@
                         </div>
                     </figure>
                     <figure  project_type="website" project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/krinablaz.png" 
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/krinablaz.png" 
                                 alt="krinablaz web site" />
                                 <div class="icons">
                                     <div class="status">completed</div>
                                 </div>
                     </figure>
                     <figure  project_type="website" project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/carshow-1.png" alt="a river in the snow" />
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/carshow-1.png" alt="a river in the snow" />
                         <div class="icons">
                             <div class="status">completed</div>
                         </div>
                     </figure>
                     <figure project_type="mobile_application" project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/krinablazApp.png" alt="a single checked balloon" />
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/krinablazApp.png" alt="a single checked balloon" />
                         <div class="icons">
                             <a  modal-name="krinablaz_app_modal">view</a>
                             <div class="status">completed</div>
@@ -511,7 +511,7 @@
                         </div>
                     </figure>
                     <figure  project_type="web_application"  project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/web-duhok-hotels.png" alt="a balloon fairground ride" />
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/web-duhok-hotels.png" alt="a balloon fairground ride" />
                         <div class="icons">
                             <div class="status">completed</div>
                         </div>
@@ -524,20 +524,20 @@
                         </div>
                     </figure>
                     <figure  project_type="web_application"  project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/doc.JPG" alt="sunrise over a harbor" />
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/doc.JPG" alt="sunrise over a harbor" />
                         <div class="icons">
                             <div class="status">completed</div>
                         </div>
                     </figure>                    
                     <figure  project_type="web_application" project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/xanubar.png"
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/xanubar.png"
                             alt="xanubar.com" />
                             <div class="icons">
                                 <div class="status">completed</div>
                             </div>
                     </figure>
                     <figure  project_type="game"  project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/qreji.PNG" 
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/qreji.PNG" 
                              alt="mobile game" />
                              <div class="icons">
                                 <a modal-name="qreji_game_modal">view</a>
@@ -545,7 +545,7 @@
                             </div>
                     </figure>
                     <figure  project_type="mobile_application" project_status="completed">
-                        <img src="https://dlovan.info/images/portofolio/Android-DuhokHotels2.png"
+                        <img src="https://raw.githubusercontent.com/dilovan/dlovan/main/images/portofolio/Android-DuhokHotels2.png"
                             alt="Hotels Viewer" />
                             <div class="icons">
                                 <div class="status">completed</div>
