--- a/index.html
+++ b/index.html
@@ -813,13 +813,13 @@
                     <h2 class="title">Screen record</h2>
                     <div class="video">
                         <video  controls>
-                            <source src="./images/CS/CS_Record.webm" type="video/mp4">
+                            <source src="https://drive.google.com/file/d/1QXZh5Ji4ek5Ex1vqgt_L6lTjR6RiszXd/view?usp=sharing" type="video/mp4">
                                 Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="video">
                         <video  controls>
-                            <source src="./images/CS/2.webm" type="video/mp4">
+                            <source src="https://drive.google.com/file/d/1nzitZ4BZxOqEikvP4eueUf08-4uxF8co/view?usp=sharing" type="video/mp4">
                                 Your browser does not support the video tag.
                         </video>
                     </div>
