--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,27 @@
         </div>
 
     </div>
-
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCDjS5g1tgo_kxZtMq_KrEUXt3dzbWfvuc",
+    authDomain: "dlovan-info.firebaseapp.com",
+    projectId: "dlovan-info",
+    storageBucket: "dlovan-info.appspot.com",
+    messagingSenderId: "263703489894",
+    appId: "1:263703489894:web:d009ed18a0fca4d462eca7",
+    measurementId: "G-HLB47Y54T4"
+  };
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/service.js"></script>
     <script src="js/main.js"></script>
